# GemmaTraderAIBot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  Rey_Capital_AI_Bot_Setup_Guide.docx  backtester.py  broker_bridge.py  config.yaml  dashboard.py  docker-compose.yml  ensemble.py  extra_features.py  gemma_analyzer.py  local_trader.py  metrics.py  mt5_account.yaml.example  mt5_data_feed.py  news_blackouts.yaml.example  news_calendar.py  notifications.yaml.example  notifier.py  pyproject.toml  requirements.txt  risk_manager.py  run.py  safety.py  server.py  symbol_registry.py  symbols.yaml  test_lots.py  trade_reviewer.py
.github/workflows/: ci.yml
deploy/: setup_local.bat  setup_windows_ec2.ps1  vps_setup.ps1
docs/: API.md  ARCHITECTURE.md  CONFIG.md  PROFITABILITY_SUITE.md  SETUP.md
scripts/: README.md  create_doc.py  init_config.py  test_gemma.py
src/gemma_trader/: advanced_features.py  backtester.py  broker_bridge.py  dashboard.py  ensemble.py  extra_features.py  gemma_analyzer.py  historical_backtester.py  hyperopt.py  local_trader.py  metrics.py  ml_baseline.py  mt5_account.py  mt5_data_feed.py  run.py  (+9 more)
templates/: dashboard.html  settings.html
tests/: conftest.py  test_advanced_features.py  test_ensemble_and_news.py  test_hallucination_guards.py  test_historical_backtester.py  test_hyperopt.py  test_integration.py  test_metrics_and_backtest.py  test_ml_baseline.py  test_mt5_account.py  test_regime_detector.py  test_risk_manager.py  test_safety.py  test_storage.py  test_symbol_registry.py  test_symbol_registry_lot.py
