[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma-trader-ai-bot"
version = "0.1.0"
description = "LLM-driven trading bot with dashboard, risk controls, and backtesting."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
